// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.table.placeholder-body-cell > action column 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 15 1.5 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 225px;
  padding: 8px;
  text-align: left;
  width: 225px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  flex-direction: column;
  justify-content: flex-start;
}

[data-role="tree"] .c1.c1 {
  padding: 8px;
}

.c1.c1 > * {
  align-self: flex-start;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

.c2 {
  background-image: linear-gradient(to right, rgba(226, 230, 233, 0.8) 20%, rgb(226, 230, 233) 50%, rgba(226, 230, 233, 0.8) 80%);
  background-size: 500px 100%;
  background-clip: content-box;
  min-height: 32px;
  flex-grow: 1;
  width: 100%;
  animation-name: k0;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-duration: 0.5s;
}

@keyframes k0 {
  0% {
    background-position: -250px 0px;
  }

  100% {
    background-position: 250px 0px;
  }
}

<div
  class="c0 c1 table__contentCell table__contentCell--15"
  data-role="table-body-cell"
  data-width="1.5"
  role="cell"
>
  <div
    class="c2 table__bodyContent--placeHolder"
    data-role="table-body-content-placeholder"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.placeholder-body-cell > column group 1`] = `
.c0 {
  display: flex;
  flex-grow: 1;
}

.c1 {
  position: relative;
}

.c1::after {
  content: "";
  top: 0px;
  right: 0px;
  bottom: 0px;
  position: absolute;
  border-right: 2px solid rgb(241, 242, 244);
  display: block;
  left: unset;
}

@keyframes k0 {
  0% {
    background-position: -250px 0px;
  }

  100% {
    background-position: 250px 0px;
  }
}

<div
  class="c0 c1 table__content-group"
  data-role="table-body-cell-group"
  style="flex-grow: 20; flex-shrink: 2;"
/>
`;

exports[`com.mgmtp.a12.widgets.table.placeholder-body-cell > default 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 0 0 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 225px;
  padding: 8px;
  text-align: left;
  width: 225px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  flex-direction: column;
  justify-content: flex-start;
}

[data-role="tree"] .c1.c1 {
  padding: 8px;
}

.c1.c1 > * {
  align-self: flex-start;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

.c2 {
  background-image: linear-gradient(to right, rgba(226, 230, 233, 0.8) 20%, rgb(226, 230, 233) 50%, rgba(226, 230, 233, 0.8) 80%);
  background-size: 500px 100%;
  background-clip: content-box;
  min-height: 32px;
  flex-grow: 1;
  width: 100%;
  animation-name: k0;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-duration: 0.5s;
}

@keyframes k0 {
  0% {
    background-position: -250px 0px;
  }

  100% {
    background-position: 250px 0px;
  }
}

<div
  class="c0 c1 table__contentCell table__contentCell--15 table__contentCell--fixedWidth"
  data-role="table-body-cell"
  data-width="1.5"
  role="cell"
>
  <div
    class="c2 table__bodyContent--placeHolder"
    data-role="table-body-content-placeholder"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.placeholder-body-cell > with resizing columns 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 0 0 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c0 [data-head-cell-resizing="true"] div {
  background-color: transparent;
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  flex-direction: column;
  justify-content: flex-start;
}

[data-role="tree"] .c1.c1 {
  padding: 8px;
}

.c1.c1 > * {
  align-self: flex-start;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

.c2 {
  background-image: linear-gradient(to right, rgba(226, 230, 233, 0.8) 20%, rgb(226, 230, 233) 50%, rgba(226, 230, 233, 0.8) 80%);
  background-size: 500px 100%;
  background-clip: content-box;
  min-height: 32px;
  flex-grow: 1;
  width: 100%;
  animation-name: k0;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-duration: 0.5s;
}

@keyframes k0 {
  0% {
    background-position: -250px 0px;
  }

  100% {
    background-position: 250px 0px;
  }
}

<div
  class="c0 c1 table__contentCell table__contentCell--10 table__contentCell--fixedWidth"
  data-role="table-body-cell"
  role="cell"
>
  <div
    class="c2 table__bodyContent--placeHolder"
    data-role="table-body-content-placeholder"
  />
</div>
`;
